--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "php": ">=5.3.2"
     },
     "autoload": {
-        "psr-0": { "BreezeJs": "src/" }
+        "psr-0": {
+            "BreezeJs": "src/",
+            "BreezeJsBundle": "src/"
+        }
     },
     "minimum-stability": "dev"
 }
