--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
     ],
     "require": {
         "php": ">=5.3.2",
+        "doctrine/orm": ">=2.4",
         "jms/serializer": "~0.13"
     },
     "autoload": {
         "psr-0": {
             "Adrotec": "src/",
-            "OdataProducer": "src/"
+            "ODataProducer": "src/"
         }
     },
     "minimum-stability": "dev"
