--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     "require": {
         "php": ">=5.3.2",
         "doctrine/orm": ">=2.4",
-        "jms/serializer": "~0.13"
+        "jms/serializer": "~0.13",
+        "adrotec/odataphpprod": "dev-master",
+        "symfony/validator": "dev-master"
     },
     "autoload": {
         "psr-0": {
-            "Adrotec": "src/",
-            "ODataProducer": "src/"
+            "Adrotec\\BreezeJs": "src/"
         }
     },
     "minimum-stability": "dev"
