--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.3.2",
         "doctrine/orm": ">=2.4",
         "jms/serializer": "~0.13",
-        "adrotec/odataphpprod": "dev-master",
+        "adrotec/odataphpprod": "1.0.*",
         "symfony/validator": "dev-master"
     },
     "autoload": {
