--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
         "php": ">=5.3.2",
         "doctrine/orm": ">=2.4",
         "jms/serializer": "~0.13",
-        "adrotec/odataphpprod": "1.0.*",
-        "symfony/validator": "dev-master"
+        "adrotec/odataphpprod": "1.0.*"
+    },
+    "suggest": {
+        "symfony/validator": "Enable Validation"
     },
     "autoload": {
         "psr-0": {
             "Adrotec\\BreezeJs": "src/"
         }
-    },
-    "minimum-stability": "dev"
+    }
 }
